jumping h1 span section corrected in main.js

--- a/stylesheets/abstracts/_mixins.scss
+++ b/stylesheets/abstracts/_mixins.scss
@@ -50,14 +50,6 @@
   }
 }
 
-@mixin font-resize($fontsizes) {
-  @media only screen and (min-width: 900px) {
-    @each $fontsize, $value in $fontsizes {
-      font-size: $value * 1.3;
-    }
-  }
-}
-
 /// Event wrapper
 /// @author Harry Roberts
 /// @param {Bool} $self [false] - Whether or not to include current selector
