--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -42,7 +42,10 @@ a {
 }
 
 section {
-  margin: 8em 0em;
+  margin: 3em 0em;
+  @include media(tablet) {
+    margin: 8em 0em;
+  }
 }
 
 main {
